AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = mandoline
mandoline_SOURCES = Mandoline.cc CarveOp.cc CarveOp.h CarvedSlice.cc \
	CarvedSlice.h Defaults.h GCodeExportOp.cc GCodeExportOp.h \
	InfillOp.cc InfillOp.h InsetOp.cc InsetOp.h OpQueue.cc OpQueue.h \
	OpThread.cc OpThread.h Operation.h PathFinderOp.cc PathFinderOp.h \
	SlicingContext.cc SlicingContext.h Stopwatch.cc Stopwatch.h \
	SvgDumpOp.cc SvgDumpOp.h \
	BGL/BGL.h BGL/BGLAffine.cc BGL/BGLAffine.h BGL/BGLBounds.cc \
	BGL/BGLBounds.h BGL/BGLCommon.cc BGL/BGLCommon.h \
	BGL/BGLCompoundRegion.cc BGL/BGLCompoundRegion.h \
	BGL/BGLIntersection.cc BGL/BGLIntersection.h \
	BGL/BGLLine.cc BGL/BGLLine.h \
	BGL/BGLMesh3d.cc BGL/BGLMesh3d.h \
	BGL/BGLPath.cc BGL/BGLPath.h \
	BGL/BGLPoint.cc BGL/BGLPoint.h \
	BGL/BGLPoint3d.cc BGL/BGLPoint3d.h \
	BGL/BGLSVG.cc BGL/BGLSVG.h \
	BGL/BGLSimpleRegion.cc BGL/BGLSimpleRegion.h \
	BGL/BGLTriangle3d.cc BGL/BGLTriangle3d.h

# dist_noinst_SCRIPTS = autogen.sh

