AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

SUBDIRS=tests

lib_LTLIBRARIES = libBGL.la
libBGL_la_SOURCES = \
	BGLAffine.cc \
	BGLBounds.cc \
	BGLCommon.cc \
	BGLCompoundRegion.cc \
	BGLIntersection.cc \
	BGLLine.cc \
	BGLMesh3d.cc \
	BGLPath.cc \
	BGLPoint.cc \
	BGLPoint3d.cc \
	BGLSVG.cc \
	BGLSimpleRegion.cc \
	BGLTriangle3d.cc
include_HEADERS = \
	BGL.hh \
	BGLAffine.hh \
	BGLBounds.hh \
	BGLCommon.hh \
	BGLCompoundRegion.hh \
	BGLIntersection.hh \
	BGLLine.hh \
	BGLMesh3d.hh \
	BGLPath.hh \
	BGLPoint.hh \
	BGLPoint3d.hh \
	BGLSVG.hh \
	BGLSimpleRegion.hh \
	BGLTriangle3d.hh


